--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,50 +1,30 @@
-# default release tags
-include:
-  - project: 'pve-cloud/pve-cloud-pipelines'
-    file: 'release-tag.yml'
-    ref: 'master'
-
-# trigger the new pipeline manually as the ci token cannot https://gitlab.com/gitlab-org/gitlab/-/issues/569974
-# also cannot put this include since CI variable evaluation is stupid
-trigger_version_tag:
-  stage: deploy
-  image: alpine/curl:8.14.1
-  dependencies:
-    - release_tag
+release_tag:
+  stage: build
+  image: tobiashvmz/pve-cloud-ci:latest
   script:
-    - source tag.env
-    - |
-      curl --request POST \
-        --form "token=${CI_JOB_TOKEN}" \
-        --form "ref=${NEW_TAG}" \
-        "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/trigger/pipeline"
+    - /scripts/release-tag.sh
   rules:
-    - if: '$CI_COMMIT_TAG =~ /^release-[a-z]+$/'    
-
+    - if: '$CI_COMMIT_TAG =~ /^release-[a-z]+$/'
+  resource_group: deploy-prod
 
 # pipeline trigger if the upstream releases
 pve_cloud_controller_upstream:
   stage: build
-  image: alpine/git:v2.49.1
+  image: tobiashvmz/pve-cloud-ci:latest
   script:
     # write the new version
     - sed -i "s/var\.cloud_controller_version\s==\s\?\snull\s?\s\".*\"/var.cloud_controller_version == null ? \"${PVE_CLOUD_CONTROLLER}\"/" modules/controller/variables.tf
-    - COMMIT_MESSAGE="Update pve-cloud-controller version to ${PVE_CLOUD_CONTROLLER}"
-
-    - *push_script
+    - /scripts/upstream-push.sh "Update pve-cloud-controller version to ${PVE_CLOUD_CONTROLLER}"
   rules:
     - if: ( $PVE_CLOUD_CONTROLLER != null || $PVE_CLOUD_CONTROLLER =~ /^./ ) # set by upstream
 
-
 pve_cloud_backup_upstream:
   stage: build
-  image: alpine/git:v2.49.1
+  image: tobiashvmz/pve-cloud-ci:latest
   script:
     # write the new version
     - sed -i "s/var\.backup_image_version\s==\s\?\snull\s?\s\".*\"/var.backup_image_version == null ? \"${PVE_CLOUD_BACKUP}\"/" modules/backup/variables.tf
-    - COMMIT_MESSAGE="Update pve-cloud-backup version to $PVE_CLOUD_BACKUP"
-    
-    - *push_script
+    - /scripts/upstream-push.sh "Update pve-cloud-backup version to $PVE_CLOUD_BACKUP"
   rules:
     - if: ( $PVE_CLOUD_BACKUP != null || $PVE_CLOUD_BACKUP =~ /^./ ) # set by upstream
 
