--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,19 @@ release_tag:
     - if: '$CI_COMMIT_TAG =~ /^release-[a-z]+$/'
   resource_group: deploy-prod
 
+trigger_upstream_release_tag:
+  stage: deploy
+  image: alpine/curl:8.14.1
+  script:
+    - |
+      curl --request POST \
+        --form "token=${CI_JOB_TOKEN}" \
+        --form "ref=${UPSTREAM_TAG_MESSAGE}" \
+        "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/trigger/pipeline"
+  rules:
+    - if: ( $PVE_CLOUD_CONTROLLER != null || $PVE_CLOUD_CONTROLLER =~ /^./ )
+    - if: ( $PVE_CLOUD_BACKUP != null || $PVE_CLOUD_BACKUP =~ /^./ ) # set by upstream
+
 # pipeline trigger if the upstream releases
 pve_cloud_controller_upstream:
   stage: build
