--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,11 @@
 release_tag:
   stage: build
-  image: tobiashvmz/pve-cloud-ci:2025121214
+  image: tobiashvmz/pve-cloud-ci:2025121321
   script:
     - /scripts/release-tag.sh
   rules:
     - if: '$CI_COMMIT_TAG =~ /^release-[a-z]+$/'
+    - if: '$CI_COMMIT_TAG =~ /^release-all-[a-z]+$/'
   resource_group: deploy-prod
 
 trigger_upstream_release_tag:
@@ -17,13 +18,13 @@ trigger_upstream_release_tag:
         --form "ref=${UPSTREAM_TAG_MESSAGE}" \
         "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/trigger/pipeline"
   rules:
-    - if: ( $PVE_CLOUD_CONTROLLER != null || $PVE_CLOUD_CONTROLLER =~ /^./ )
-    - if: ( $PVE_CLOUD_BACKUP != null || $PVE_CLOUD_BACKUP =~ /^./ ) # set by upstream
+    - if: $UPSTREAM_TAG_MESSAGE =~ /-all-/ && ( $PVE_CLOUD_CONTROLLER != null || $PVE_CLOUD_CONTROLLER =~ /^./ )
+    - if: $UPSTREAM_TAG_MESSAGE =~ /-all-/ && ( $PVE_CLOUD_BACKUP != null || $PVE_CLOUD_BACKUP =~ /^./ ) # set by upstream
 
 # pipeline trigger if the upstream releases
 pve_cloud_controller_upstream:
   stage: build
-  image: tobiashvmz/pve-cloud-ci:2025121214
+  image: tobiashvmz/pve-cloud-ci:2025121321
   script:
     # write the new version
     - sed -i "s/var\.cloud_controller_version\s==\s\?\snull\s?\s\".*\"/var.cloud_controller_version == null ? \"${PVE_CLOUD_CONTROLLER}\"/" modules/controller/variables.tf
@@ -33,7 +34,7 @@ pve_cloud_controller_upstream:
 
 pve_cloud_backup_upstream:
   stage: build
-  image: tobiashvmz/pve-cloud-ci:2025121214
+  image: tobiashvmz/pve-cloud-ci:2025121321
   script:
     # write the new version
     - sed -i "s/var\.backup_image_version\s==\s\?\snull\s?\s\".*\"/var.backup_image_version == null ? \"${PVE_CLOUD_BACKUP}\"/" modules/backup/variables.tf
